src/objects/inscor__Expense_Report__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Billable_Expenses__c</fullName>
        <label>Billable Expenses</label>
        <summarizedField>inscor__Expense_Report_Line__c.inscor__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>inscor__Expense_Report_Line__c.inscor__Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>inscor__Expense_Report_Line__c.inscor__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>inscor__Employee__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Total_Expenses__c</fullName>
        <label>Total Expenses</label>
        <summarizedField>inscor__Expense_Report_Line__c.inscor__Amount__c</summarizedField>
        <summaryForeignKey>inscor__Expense_Report_Line__c.inscor__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Expense Report</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expense Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>